engine/tests/fixtures/invalid/http-responses/shape-output-task.tg
shape shape_output_task_detail from entity_task {
  name "Task Detail"
  description "Task detail output"
  include [id, created_at]
  status active
}
